@@ -1,3 +1,6 @@
+*Thu Nov 3 2011 Henri Gavin <.> 0.20100105
+- update user-manual.html, add Cowper's 1966 paper to the list of references for shear correction factors
+
 *Tue Nov 1 2011 Henri Gavin <.> 0.20100105
 - wordsmithing in user-manual.html regarding shear effects
 
